--- a/index.html
+++ b/index.html
@@ -2,18 +2,32 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Atmosphären</title>
-  
+  <title>REALITY</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="favicon.ico" rel="icon" type="image/x-icon" />
+
+  <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
-	  <div>
+    <div class="atmo_title">
 
-		  Atmosphären
+      Atmosphären
     
     </div>
 
+    <div class="atmo_info">
+      <p>
+      Audiovisual Festival
+      </p>
+    
+    </div>
 
+  <hr class="line">
+
+  <div><a class="link" href="#" target="_blank"><button>Pagina FB</button></a></div>
+
+   <div><a class="link" href="#" target="_blank"><button>Evento FB</button></a></div>
 
 
 </body>
