--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
   <hr class="line">
 
-  <div><a class="link" href="#" target="_blank"><button>Pagina FB</button></a></div>
+  <div><a class="link" href="https://www.facebook.com/pages/Atmosph%C3%A4ren/242715399253520?fref=ts" target="_blank"><button>Pagina FB</button></a></div>
 
-   <div><a class="link" href="#" target="_blank"><button>Evento FB</button></a></div>
+   <div><a class="link" href="https://www.facebook.com/events/1441821476068006/" target="_blank"><button>Evento FB</button></a></div>
 
 
 </body>
