--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>REALITY</title>
+  <title>Atmosphären</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="favicon.ico" rel="icon" type="image/x-icon" />
 
