--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     
     </div>
 
-    <div class="atmo_info">
+    <div class="atmo_title2">
       <p>
       Audiovisual Festival
+      </p>
+      <p class="atmo_info">
+      More info soon
       </p>
     
     </div>
