--- a/index.html
+++ b/index.html
@@ -20,7 +20,21 @@
       Audiovisual Festival
       </p>
       <p class="atmo_info">
-      More info soon
+      27-28 Giugno 2014
+      Galleria d’arte - Magazzini San Pietro
+      Via San Pietro 12, Formigine
+
+      <br>
+
+      Atmosphären è un evento culturale che
+      avrà luogo nelle serate del 27 e 28 Giugno.
+      L’idea è di organizzare nello spazio dei
+      Magazzini San Pietro di Formigine una
+      situazione a metà fra aperitivo, mostra
+      e clubnight. L’intento è quello di riunire
+      il pubblico che frequenta questi tre tipi di
+      ambienti in una situazione ibrida che sia
+      diverte, ma anche interessante da visitare.
       </p>
     
     </div>
