--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
       <br>
 
-      Atmosphären è un evento culturale che
-      avrà luogo nelle serate del 27 e 28 Giugno.
+      Atmosphären è un evento culturale incentrato sulla arte visuale applicata alla musica.
       L’idea è di organizzare nello spazio dei
       Magazzini San Pietro di Formigine una
       situazione a metà fra aperitivo, mostra
