--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
       <div class="atmo_info">
       <p>
-      27-28 Giugno 2014<br>
+      <b>27-28 Giugno 2014<br>
       Galleria d’arte - Magazzini San Pietro<br>
-      Via San Pietro 12, Formigine<br>
+      Via San Pietro 12, Formigine<br></b>
       </p>
       <p>
       Atmosphären è un evento culturale incentrato sulla arte visuale applicata alla musica.
