--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
       </p>
       <p>
       Atmosphären è un evento culturale incentrato sulla arte visuale applicata alla musica.
-      L’idea è di organizzare nello spazio dei
-      Magazzini San Pietro di Formigine una
+      L’evento avrà luogo nello spazio dei
+      Magazzini San Pietro di Formigine e sarà una
       situazione a metà fra aperitivo, mostra
       e clubnight. L’intento è quello di riunire
       il pubblico che frequenta questi tre tipi di
       ambienti in una situazione ibrida che sia
       diverte, ma anche interessante da visitare.
       </p>
+      <p>
+      Apertura ore 18:00 - Chiusura ore 24:00
       </div>
     
     
