--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 
    <div><a class="link" href="https://www.facebook.com/events/1441821476068006/" target="_blank"><button>Evento FB</button></a></div>
 
+   <div class="mail">
+    <a href="mailto:info.atmo.crew@gmail.com"><img src="email-to.svg"></a>
+   </div>
 
 </body>
 </html>
