--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
    <div><a class="link" href="https://www.facebook.com/events/1441821476068006/" target="_blank"><button>Evento FB</button></a></div>
 
    <div class="mail">
-    <a href="mailto:info.atmo.crew@gmail.com"><img src="email-to.svg"></a>
+    <a href="mailto:info.atmo.crew@gmail.com"><svg href="email-to.svg"></a>
    </div>
 
 </body>
