--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
 
    <div><a class="link" href="https://www.facebook.com/events/1441821476068006/" target="_blank"><button>Evento FB</button></a></div>
 
-   <div class="mail">
-    <a href="mailto:info.atmo.crew@gmail.com"><svg href="email-to.svg"></a>
-   </div>
+   <div><a class="link" href="mailto:info.atmo.crew@gmail.com" target="_blank"><button>E-mail</button></a></div>
 
 </body>
 </html>
