--- a/index.html
+++ b/index.html
@@ -28,14 +28,9 @@
       Via San Pietro 12, Formigine<br></b>
       </p>
       <p>
-      Atmosphären è un evento culturale incentrato sulla arte visuale applicata alla musica.
-      L’evento avrà luogo nello spazio dei
-      Magazzini San Pietro di Formigine e sarà una
-      situazione a metà fra aperitivo, mostra
-      e clubnight. L’intento è quello di riunire
-      il pubblico che frequenta questi tre tipi di
-      ambienti in una situazione ibrida che sia
-      diverte, ma anche interessante da visitare.
+      Atmosphären è un evento culturale incentrato sull’arte visuale applicata alla musica. L’evento avrà luogo nella galleria d’arte “Magazzini San Pietro” di Formigine (MO). Nei piccoli ripostigli della location vi saranno installazioni fatte da sei artisti italiani, mentre nella sala principale vi sarà un palco sul quale avverranno le performance audio-video live.
+      La situazione sarà a metà fra un aperitivo, un mostra e una clubnight; l’intento è quello di riunire il pubblico che frequenta questi tre tipi di ambienti in una situazione ibrida che sia diverte, ma anche interessante da visitare.
+
       </p>
       <p>
       Apertura ore 18:00 - Chiusura ore 24:00
