--- a/en.html
+++ b/en.html
@@ -9,6 +9,10 @@
 
 </head>
 <body>
+    <div class="lang">
+      <a href="en.html">IT</a>/EN
+    </div>
+
     <div class="atmo_title">
 
       Atmosphären
