--- a/en.html
+++ b/en.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="lang">
-      <a href="index.html">IT</a>/<a href="en.html">EN</a>
+      <a href="index.html">IT</a>/EN
     </div>
 
     <div class="atmo_title">
