--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
 </head>
 <body>
+
+    <div class="lang">
+      IT - <a href="en.html">EN</a>
+    </div>
+
     <div class="atmo_title">
 
       Atmosphären
