--- a/en.html
+++ b/en.html
@@ -27,8 +27,8 @@
 
       <div class="atmo_info">
       <p>
-      <b>27-28 Giugno 2014<br>
-      Galleria d’arte - Magazzini San Pietro<br>
+      <b>27-28 June 2014<br>
+      Art Gallery - Magazzini San Pietro<br>
       Via San Pietro 12, Formigine<br></b>
       </p>
       <p>
