--- a/en.html
+++ b/en.html
@@ -32,8 +32,7 @@
       Via San Pietro 12, Formigine<br></b>
       </p>
       <p>
-      Atmosphären is a cultural event of two nights focused on visual arts applied to the music. It is going to be at the art gallery 'Magazzini San Pietro' in Formigine, a small city closed to Modena. There are going to be installations by six young Italian media artists, distributed in the small rooms of location. While the installations will be permanent, in the main room there is going to be a stage where live audiovisual performances are going to take place.
-      The mood is going to be at the intersection of an exhibition and a clubnight, the intent is to unite the public of the different events in a hybrid situation, enjoyable but also interesting to visit.
+     Atmosphären is a two-nights-long cultural event focused on visual arts applied to music. It will be held at the 'Magazzini San Pietro' art gallery in small town Formigine, next to Modena. Installations by six young Italian media artists will be on display in the small rooms of the location. While the installations will be shown for the entire time of the event, in the main room stage different live audiovisual performances will take place. The feeling will be a mix between an art exhibition and a club night, in order to gather people from two different event in a hybrid situation, enjoyable and interesting to see.
 
 
       </p>
