--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       Via San Pietro 12, Formigine<br></b>
       </p>
       <p>
-      Atmosphären è un evento culturale incentrato sull’arte visuale applicata alla musica. L’evento avrà luogo nella galleria d’arte “Magazzini San Pietro” di Formigine (MO). Nei piccoli ripostigli della location vi saranno installazioni fatte da sei artisti italiani, mentre nella sala principale vi sarà un palco sul quale avverranno le performance audio-video live.
+      Atmosphären è un evento culturale incentrato sull’arte visuale applicata alla musica. L’evento avrà luogo nella galleria d’arte “Magazzini San Pietro” di Formigine (MO). Nei piccoli ripostigli della location vi saranno installazioni fatte da sei giovani artisti italiani, mentre nella sala principale vi sarà un palco sul quale avverranno le performance audio-video live.
       La situazione sarà a metà fra un aperitivo, un mostra e una clubnight; l’intento è quello di riunire il pubblico che frequenta questi tre tipi di ambienti in una situazione ibrida che sia diverte, ma anche interessante da visitare.
 
       </p>
