--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </p>
       <p>
       Atmosphären è un evento culturale incentrato sull’arte visuale applicata alla musica. L’evento avrà luogo nella galleria d’arte “Magazzini San Pietro” di Formigine (MO). Nei piccoli ripostigli della location vi saranno installazioni fatte da  giovani artisti italiani, mentre nella sala principale vi sarà un palco sul quale avverranno le performance audio-video live.
-      La situazione sarà a metà fra un aperitivo, un mostra e una clubnight; l’intento è quello di riunire il pubblico che frequenta questi tre tipi di ambienti in una situazione ibrida che sia diverte, ma anche interessante da visitare.
+      La situazione sarà a metà fra un aperitivo, una mostra e una clubnight; l’intento è quello di riunire il pubblico che frequenta questi tre tipi di ambienti in una situazione ibrida che sia divertente, ma anche interessante da visitare.
 
       </p>
       Apertura ore 18:00 - Chiusura ore 24:00
