--- a/index_artists.html
+++ b/index_artists.html
@@ -51,11 +51,17 @@
   <div class="artist">
     <h1>Artists</h1>
 
-      <p><h2>Veronika Maz</h2>
-      bio+img+link
+      <p><h2>Super Doooper</h2>
+      Dal 2010 Marco lavora come media artist sotto il nome di Super Droooper. Il contrasto tra mondo digitale e spazio fisico rappresenta una sfida che lo ha costantemente spinto verso nuovi risultati. Le caratteristiche mutevoli degli spazi in cui lavora non consentono mai una soluzione costante. Le sue opere spaziano da 3D-projection-mapping a interventi con fibre ottiche, sempre creando contrasti tra bianco e nero e linee geometriche che costituiscono la sua forte identità.
       </p>
 
-      <p><h2>Super Doooper</h2>
+      <p><h2>Veronika Maz</h2>
+      Da sempre grande appassionata di musica, fotografia e psicoanalisi, durante i suoi studi 
+      artistici all’accademia riesce a trovare il connubio perfetto unire queste tre arti in un'unica esperienza: la Visual Music.
+      Veronika lavora principalmente come freelance Vj/Digital Artist collaborando con diverse realtà artistico-musicali.
+      </p>
+
+      <p><h2>Stefano Polli</h2>
       bio+img+link
       </p>
 
@@ -71,6 +77,13 @@
       bio+img+link
       </p>
 
+      <p><h2>Dago</h2>
+      Dago nasce come Mindwank attorno all'estate del 2006 a Mantova, poi scappa.
+      Gabriele invece si lascia alle spalle rave innominabili e feste in cameretta per approdare a Milano e coltivare come un giardiniere le sue passioni. Diventa parte del roaster di Elita Milano producendo eventi, lanciando breakbeat, nudisco, technowaltzer e dissimili da giradischi o sostituti.
+      Vince 989RecordsContest di Pordenone ancora imberbe, fa prove di canto a caso, si finge un gatto e mette musica a fianco di Moullinex, 2ManyDJs, Onra, Pantha du Prince, Shox e altri felici disperati.
+
+
+      </p>
 
 
   </div>
