--- a/index_artists.html
+++ b/index_artists.html
@@ -62,7 +62,10 @@
       </p>
 
       <p><h2>Stefano Polli</h2>
-      bio+img+link
+      Classe 1982, graphic designer e live media artist, specializzato in museografia, motion graphics e comunicazione visiva. Ha realizzato progetti museografici e di interaction design per MTV, Nazioni Unite, Triennale di Milano, Palazzo Reale, Nissan, Rinascente e molti altri.
+      Cura identità e vjing del collettivo musicale Reset!, realizzando progetti ad alto livello sperimentale, come il primo vj set realizzato in Augmented Reality.
+      I suoi progetti sono stati pubblicati su testate come Wired, Rolling Stones, Corriere e Repubblica.
+      Collabora presso gli studi AR.CH.IT architetti associati, Studio Azzurro, Studio Claudio Sinatti, Sugodesign.
       </p>
 
       <p><h2>Colette Baraldi</h2>
