--- a/index_artists.html
+++ b/index_artists.html
@@ -51,9 +51,13 @@
   <div class="artist">
     <h1>Artists</h1>
 
+      <hr class="line">
+
       <p><h2>Super Doooper</h2>
       Dal 2010 Marco lavora come media artist sotto il nome di Super Droooper. Il contrasto tra mondo digitale e spazio fisico rappresenta una sfida che lo ha costantemente spinto verso nuovi risultati. Le caratteristiche mutevoli degli spazi in cui lavora non consentono mai una soluzione costante. Le sue opere spaziano da 3D-projection-mapping a interventi con fibre ottiche, sempre creando contrasti tra bianco e nero e linee geometriche che costituiscono la sua forte identità.
       </p>
+
+      <hr class="line">
 
       <p><h2>Veronika Maz</h2>
       Da sempre grande appassionata di musica, fotografia e psicoanalisi, durante i suoi studi 
