--- a/index_artists.html
+++ b/index_artists.html
@@ -49,11 +49,11 @@
   <hr class="line">
 
   <div class="artist">
-    <h1>Artists</h1>
+    <h1>Media Artists</h1>
 
       <hr class="line2">
 
-      <p><h2>Colette Baraldi</h2>
+      <p><h2>Res EBE</h2>
       Res EBE è l'alter ego di Colette Baraldi, opera nella luce e nel buio per destabilizzare e comunicare.
       </p>
 
@@ -88,7 +88,17 @@
 
       <hr class="line2">
 
-      <p><h2>Dago</h2>
+      <p><h2>Marco Rizzo</h2>
+      bio+img+link
+      </p>
+
+      <hr class="line2">
+
+    <h1>Djs</h1>
+
+      <hr class="line2">
+
+      <p><h2>Dave</h2>
       Dago nasce come Mindwank attorno all'estate del 2006 a Mantova, poi scappa.
       Gabriele invece si lascia alle spalle rave innominabili e feste in cameretta per approdare a Milano e coltivare come un giardiniere le sue passioni. Diventa parte del roaster di Elita Milano producendo eventi, lanciando breakbeat, nudisco, technowaltzer e dissimili da giradischi o sostituti.
       Vince 989RecordsContest di Pordenone ancora imberbe, fa prove di canto a caso, si finge un gatto e mette musica a fianco di Moullinex, 2ManyDJs, Onra, Pantha du Prince, Shox e altri felici disperati.
@@ -96,11 +106,13 @@
 
       <hr class="line2">
 
-      <p><h2>Marco Rizzo</h2>
-      bio+img+link
+      <p><h2>Dago</h2>
+      Dago nasce come Mindwank attorno all'estate del 2006 a Mantova, poi scappa.
+      Gabriele invece si lascia alle spalle rave innominabili e feste in cameretta per approdare a Milano e coltivare come un giardiniere le sue passioni. Diventa parte del roaster di Elita Milano producendo eventi, lanciando breakbeat, nudisco, technowaltzer e dissimili da giradischi o sostituti.
+      Vince 989RecordsContest di Pordenone ancora imberbe, fa prove di canto a caso, si finge un gatto e mette musica a fianco di Moullinex, 2ManyDJs, Onra, Pantha du Prince, Shox e altri felici disperati.
       </p>
 
-      <hr class="line2">
+      
 
       
   </div>
