--- a/index_artists.html
+++ b/index_artists.html
@@ -54,13 +54,15 @@
       <hr class="line2">
 
       <p><h2>Res EBE</h2>
+        <img src="images/res.jpg">
       Res EBE è l'alter ego di Colette Baraldi, opera nella luce e nel buio per destabilizzare e comunicare.
+        <a href:"http://colettedischiena.tumblr.com/">WEBSITE</a>
       </p>
 
       <hr class="line2">
 
       <p><h2>Super Doooper</h2>
-      Dal 2010 Marco lavora come media artist sotto il nome di Super Droooper. Il contrasto tra mondo digitale e spazio fisico rappresenta una sfida che lo ha costantemente spinto verso nuovi risultati. Le caratteristiche mutevoli degli spazi in cui lavora non consentono mai una soluzione costante. Le sue opere spaziano da 3D-projection-mapping a interventi con fibre ottiche, sempre creando contrasti tra bianco e nero e linee geometriche che costituiscono la sua forte identità.
+      Il contrasto tra mondo digitale e spazio fisico rappresenta una sfida che lo ha costantemente spinto verso nuovi risultati. Le caratteristiche mutevoli degli spazi in cui lavora non consentono mai una soluzione costante. Le sue opere spaziano da 3D-projection-mapping a interventi con fibre ottiche, sempre creando contrasti tra bianco e nero e linee geometriche che costituiscono la sua forte identità.
       </p>
 
       <hr class="line2">
