--- a/index_artists.html
+++ b/index_artists.html
@@ -54,7 +54,7 @@
       <hr class="line2">
 
       <p><h2>Res EBE</h2>
-        <img src="images/res.jpg">
+        <img src="images/res.jpg" class:"img-art">
       Res EBE è l'alter ego di Colette Baraldi, opera nella luce e nel buio per destabilizzare e comunicare.
         <a href:"http://colettedischiena.tumblr.com/">WEBSITE</a>
       </p>
