--- a/index_artists.html
+++ b/index_artists.html
@@ -55,8 +55,9 @@
 
       <p><h2>Res EBE</h2>
         <img src="images/res.jpg"><br>
-      Res EBE è l'alter ego di Colette Baraldi, opera nella luce e nel buio per destabilizzare e comunicare.
+      Res EBE è l'alter ego di Colette Baraldi, opera nella luce e nel buio per destabilizzare e comunicare.<br>
         <a href:"http://colettedischiena.tumblr.com/">WEBSITE</a>
+        <a class="link" href="https://www.facebook.com/events/1441821476068006/" target="_blank">WEBSITE</a>
       </p>
 
       <hr class="line2">
