--- a/index_artists.html
+++ b/index_artists.html
@@ -54,7 +54,7 @@
       <hr class="line2">
 
       <p><h2>Res EBE</h2>
-        <img src="images/res.jpg"><br>
+        <img class="imm-art" src="images/res.jpg"><br>
       Res EBE è l'alter ego di Colette Baraldi, opera nella luce e nel buio per destabilizzare e comunicare.<br>
         <a href:"http://colettedischiena.tumblr.com/">WEBSITE</a>
         <a class="link" href="https://www.facebook.com/events/1441821476068006/" target="_blank">WEBSITE</a>
