--- a/index_artists.html
+++ b/index_artists.html
@@ -56,8 +56,7 @@
       <p><h2>Res EBE</h2>
         <img class="imm-art" src="images/res.jpg"><br>
       Res EBE è l'alter ego di Colette Baraldi, opera nella luce e nel buio per destabilizzare e comunicare.<br>
-        <a href:"http://colettedischiena.tumblr.com/">WEBSITE</a>
-        <a class="link" href="https://www.facebook.com/events/1441821476068006/" target="_blank">WEBSITE</a>
+        <a class="link" href="http://colettedischiena.tumblr.com/" target="_blank">WEBSITE</a>
       </p>
 
       <hr class="line2">
