--- a/index_artists.html
+++ b/index_artists.html
@@ -55,7 +55,7 @@
 
       <p><h2>Res EBE</h2>
         <img class="imm-art" src="images/res.jpg"><br>
-      Res EBE è l'alter ego di Colette Baraldi, opera nella luce e nel buio per destabilizzare e comunicare.<br>
+      <div class="text-art">Res EBE è l'alter ego di Colette Baraldi, opera nella luce e nel buio per destabilizzare e comunicare.<br></div>
         <a class="link" href="http://colettedischiena.tumblr.com/" target="_blank">WEBSITE</a>
       </p>
 
