--- a/index_artists.html
+++ b/index_artists.html
@@ -62,7 +62,9 @@
       <hr class="line2">
 
       <p><h2>Super Doooper</h2>
-      Il contrasto tra mondo digitale e spazio fisico rappresenta una sfida che lo ha costantemente spinto verso nuovi risultati. Le caratteristiche mutevoli degli spazi in cui lavora non consentono mai una soluzione costante. Le sue opere spaziano da 3D-projection-mapping a interventi con fibre ottiche, sempre creando contrasti tra bianco e nero e linee geometriche che costituiscono la sua forte identità.
+        <img class="imm-art" src="images/sd.jpg"><br>
+      Il contrasto tra mondo digitale e spazio fisico rappresenta una sfida che lo ha costantemente spinto verso nuovi risultati. Le caratteristiche mutevoli degli spazi in cui lavora non consentono mai una soluzione costante. Le sue opere spaziano da 3D-projection-mapping a interventi con fibre ottiche, sempre creando contrasti tra bianco e nero e linee geometriche che costituiscono la sua forte identità.<br></div>
+        <a class="link" href="http://cargocollective.com/superdroooper" target="_blank">WEBSITE</a>
       </p>
 
       <hr class="line2">
