--- a/index_artists.html
+++ b/index_artists.html
@@ -34,7 +34,7 @@
       </p>
       <p>
       Atmosphären è un evento culturale incentrato sull’arte visuale applicata alla musica. L’evento avrà luogo nella galleria d’arte “Magazzini San Pietro” di Formigine (MO). Nei piccoli ripostigli della location vi saranno installazioni fatte da  giovani artisti italiani, mentre nella sala principale vi sarà un palco sul quale avverranno le performance audio-video live.
-      La situazione sarà a metà fra un aperitivo, un mostra e una clubnight; l’intento è quello di riunire il pubblico che frequenta questi tre tipi di ambienti in una situazione ibrida che sia diverte, ma anche interessante da visitare.
+      La situazione sarà a metà fra un aperitivo, una mostra e una clubnight; l’intento è quello di riunire il pubblico che frequenta questi tre tipi di ambienti in una situazione ibrida che sia divertente, ma anche interessante da visitare.
 
       </p>
       Apertura ore 18:00 - Chiusura ore 24:00
@@ -62,10 +62,11 @@
       <hr class="line2">
 
       <p><h2>Stefano Polli</h2>
-      Classe 1982, graphic designer e live media artist, specializzato in museografia, motion graphics e comunicazione visiva. Ha realizzato progetti museografici e di interaction design per MTV, Nazioni Unite, Triennale di Milano, Palazzo Reale, Nissan, Rinascente e molti altri.
+      <div class="text-art">Classe 1982, graphic designer e live media artist, specializzato in museografia, motion graphics e comunicazione visiva. Ha realizzato progetti museografici e di interaction design per MTV, Nazioni Unite, Triennale di Milano, Palazzo Reale, Nissan, Rinascente e molti altri.
       Cura identità e vjing del collettivo musicale Reset!, realizzando progetti ad alto livello sperimentale, come il primo vj set realizzato in Augmented Reality.
       I suoi progetti sono stati pubblicati su testate come Wired, Rolling Stones, Corriere e Repubblica.
-      Collabora presso gli studi AR.CH.IT architetti associati, Studio Azzurro, Studio Claudio Sinatti, Sugodesign.
+      Collabora presso gli studi AR.CH.IT architetti associati, Studio Azzurro, Studio Claudio Sinatti, Sugodesign.<br></div>
+        <a class="link" href="http://www.stefanopolli.com/" target="_blank">WEBSITE</a>
       </p>
 
       <hr class="line2">
@@ -73,7 +74,7 @@
       <p><h2>Super Doooper</h2>
         <img class="imm-art" src="images/sd.jpg"><br>
       <div class="text-art">Il contrasto tra mondo digitale e spazio fisico rappresenta una sfida che lo ha costantemente spinto verso nuovi risultati. Le caratteristiche mutevoli degli spazi in cui lavora non consentono mai una soluzione costante. Le sue opere spaziano da 3D-projection-mapping a interventi con fibre ottiche, sempre creando contrasti tra bianco e nero e linee geometriche che costituiscono la sua forte identità.<br></div>
-        <a class="link" href="http://cargocollective.com/superdroooper" target="_blank">WEBSITE</a><br>
+        <a class="link" href="http://cargocollective.com/superdroooper" target="_blank">WEBSITE</a>
         <a class="link" href="https://www.facebook.com/pages/Super-Droooper/182482095100659?fref=ts">FB PAGE</a>
       </p>
 
@@ -84,7 +85,7 @@
       <div class="text-art">Da sempre grande appassionata di musica, fotografia e psicoanalisi, durante i suoi studi 
       artistici all’accademia riesce a trovare il connubio perfetto unire queste tre arti in un'unica esperienza: la Visual Music.
       Veronika lavora principalmente come freelance Vj/Digital Artist collaborando con diverse realtà artistico-musicali.
-        <a class="link" href="http://veronikamaz.webs.com/" target="_blank">WEBSITE</a><br>
+        <a class="link" href="http://veronikamaz.webs.com/" target="_blank">WEBSITE</a>
         <a class="link" href="https://www.facebook.com/VeronikaMazArtist?ref_type=bookmark" target="_blank">FB PAGE</a>
       </p>
 
