--- a/index_artists.html
+++ b/index_artists.html
@@ -84,7 +84,7 @@
         <img class="imm-art" src="images/maz.jpg"><br>
       <div class="text-art">Da sempre grande appassionata di musica, fotografia e psicoanalisi, durante i suoi studi 
       artistici all’accademia riesce a trovare il connubio perfetto unire queste tre arti in un'unica esperienza: la Visual Music.
-      Veronika lavora principalmente come freelance Vj/Digital Artist collaborando con diverse realtà artistico-musicali.
+      Veronika lavora principalmente come freelance Vj/Digital Artist collaborando con diverse realtà artistico-musicali.<div>
         <a class="link" href="http://veronikamaz.webs.com/" target="_blank">WEBSITE</a>
         <a class="link" href="https://www.facebook.com/VeronikaMazArtist?ref_type=bookmark" target="_blank">FB PAGE</a>
       </p>
@@ -92,13 +92,23 @@
       <hr class="line2">
 
       <p><h2>Fabio Bernardi</h2>
-      bio+img+link
+      <img class="imm-art" src="images/maz.jpg"><br>
+      <div class="text-art">XXXXXXXXXXX
+        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX<div>
+        <a class="link" href="http://www.fabiobernardi.com/" target="_blank">WEBSITE</a>
       </p>
 
       <hr class="line2">
 
       <p><h2>Marco Rizzo</h2>
-      bio+img+link
+      <img class="imm-art" src="images/maz.jpg"><br>
+      <div class="text-art">XXXXXXXXXXX
+        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX<div>
+        <a class="link" href="#" target="_blank">WEBSITE</a>
       </p>
 
       <hr class="line2">
@@ -108,17 +118,19 @@
       <hr class="line2">
 
       <p><h2>Dave</h2>
-      Dago nasce come Mindwank attorno all'estate del 2006 a Mantova, poi scappa.
+      <img class="imm-art" src="images/maz.jpg"><br>
+      <div class="text-art">Dago nasce come Mindwank attorno all'estate del 2006 a Mantova, poi scappa.
       Gabriele invece si lascia alle spalle rave innominabili e feste in cameretta per approdare a Milano e coltivare come un giardiniere le sue passioni. Diventa parte del roaster di Elita Milano producendo eventi, lanciando breakbeat, nudisco, technowaltzer e dissimili da giradischi o sostituti.
-      Vince 989RecordsContest di Pordenone ancora imberbe, fa prove di canto a caso, si finge un gatto e mette musica a fianco di Moullinex, 2ManyDJs, Onra, Pantha du Prince, Shox e altri felici disperati.
+      Vince 989RecordsContest di Pordenone ancora imberbe, fa prove di canto a caso, si finge un gatto e mette musica a fianco di Moullinex, 2ManyDJs, Onra, Pantha du Prince, Shox e altri felici disperati.<div>
+        <a class="link" href="#" target="_blank">WEBSITE</a>
       </p>
 
       <hr class="line2">
 
       <p><h2>Dago</h2>
-      Dago nasce come Mindwank attorno all'estate del 2006 a Mantova, poi scappa.
-      Gabriele invece si lascia alle spalle rave innominabili e feste in cameretta per approdare a Milano e coltivare come un giardiniere le sue passioni. Diventa parte del roaster di Elita Milano producendo eventi, lanciando breakbeat, nudisco, technowaltzer e dissimili da giradischi o sostituti.
-      Vince 989RecordsContest di Pordenone ancora imberbe, fa prove di canto a caso, si finge un gatto e mette musica a fianco di Moullinex, 2ManyDJs, Onra, Pantha du Prince, Shox e altri felici disperati.
+      <img class="imm-art" src="images/maz.jpg"><br>
+      <div class="text-art">Dj modenese, Little Dave è cresciuto artisticamente sotto l’ala di Johnny Paguro – Museek and Pizzico Records – ed è ora di casa al 65mq di Milano. É entrato a far parte della scena locale collaborando con LoveAndSound, un blog di ...<div>
+        <a class="link" href="#" target="_blank">WEBSITE</a>
       </p>
 
       
