--- a/index_artists.html
+++ b/index_artists.html
@@ -92,7 +92,7 @@
       <hr class="line2">
 
       <p><h2>Fabio Bernardi</h2>
-      <img class="imm-art" src="images/maz.jpg"><br>
+      <img class="imm-art" src="images/dai.jpg"><br>
       <div class="text-art">XXXXXXXXXXX
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
@@ -103,7 +103,7 @@
       <hr class="line2">
 
       <p><h2>Marco Rizzo</h2>
-      <img class="imm-art" src="images/maz.jpg"><br>
+      <img class="imm-art" src="images/dai.jpg"><br>
       <div class="text-art">XXXXXXXXXXX
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
@@ -118,7 +118,7 @@
       <hr class="line2">
 
       <p><h2>Dago</h2>
-      <img class="imm-art" src="images/dave.jpg"><br>
+      <img class="imm-art" src="images/dago.jpg"><br>
       <div class="text-art">Dago nasce come Mindwank attorno all'estate del 2006 a Mantova, poi scappa.
       Gabriele invece si lascia alle spalle rave innominabili e feste in cameretta per approdare a Milano e coltivare come un giardiniere le sue passioni. Diventa parte del roaster di Elita Milano producendo eventi, lanciando breakbeat, nudisco, technowaltzer e dissimili da giradischi o sostituti.
       Vince 989RecordsContest di Pordenone ancora imberbe, fa prove di canto a caso, si finge un gatto e mette musica a fianco di Moullinex, 2ManyDJs, Onra, Pantha du Prince, Shox e altri felici disperati.</div>
@@ -128,11 +128,20 @@
       <hr class="line2">
 
       <p><h2>Dave</h2>
-      <img class="imm-art" src="images/dago.jpg"><br>
+      <img class="imm-art" src="images/dave.jpg"><br>
       <div class="text-art">Dj modenese, Little Dave è cresciuto artisticamente sotto l’ala di Johnny Paguro – Museek and Pizzico Records – ed è ora di casa al 65mq di Milano. É entrato a far parte della scena locale collaborando con LoveAndSound, un blog di ...</div>
         <a class="link" href="#" target="_blank">WEBSITE</a>
       </p>
 
+      <p><h2>Present Continuous</h2>
+      <img class="imm-art" src="images/dai.jpg"><br>
+      <div class="text-art">XXXXXXXXXXX
+        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+      </div>
+        <a class="link" href="https://soundcloud.com/cioccolato" target="_blank">SOUNDCLOUD</a>
+      </p>
       
 
       
