--- a/index_artists.html
+++ b/index_artists.html
@@ -92,7 +92,7 @@
       <hr class="line2">
 
       <p><h2>Fabio Bernardi</h2>
-      <img class="imm-art" src="images/dai.jpg"><br>
+      <img class="imm-art" src="images/fab.jpg"><br>
       <div class="text-art">XXXXXXXXXXX
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
