--- a/index_artists.html
+++ b/index_artists.html
@@ -97,7 +97,7 @@
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</div>
-        <a class="link" href="http://www.fabiobernardi.com/" target="_blank">WEBSITE</a>
+        <a class="link" href="http://issuu.com/fillotassi" target="_blank">WEBSITE</a>
       </p>
 
       <hr class="line2">
